--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,8 @@
     <string name="error_cedula">Cedula NO VALIDA</string>
     <string name="error_nombre">Nombre NO VALIDO</string>
     <string name="error_apellido">Apellido NO VALIDO</string>
-    <string name="error_2">Por favor seleccione un sexo</string>
+    <string name="error_sexo">Por favor seleccione un sexo</string>
+    <string name="error_f">Por favor seleccione una foto</string>
     <string name="guardadoE">"Persona Guardada Exitosamente"</string>
     <string name="datos">Datos Personales</string>
 
